--- a/application.yml
+++ b/application.yml
@@ -3,7 +3,7 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: http://localhost:8762/eureka/
+      defaultZone: http://altkom-scah-service-registry:8761/eureka/
 management:
   endpoints:
     web:
@@ -11,4 +11,4 @@ management:
         include: info,prometheus
 spring:
   zipkin:
-    base-url: http://localhost:9411/
+    base-url: http://altkom-scah-zipkin:9411/
