--- a/reservation-service/reservation-service.yml
+++ b/reservation-service/reservation-service.yml
@@ -1,4 +1,9 @@
 spring:
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://altkom-scah-keycloak:8080/auth/realms/app-realm
   jpa:
     properties:
       hibernate:
