--- a/gateway/gateway.yml
+++ b/gateway/gateway.yml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: gateway
   cloud:
     gateway:
       routes:
@@ -6,11 +8,53 @@ spring:
           uri: lb://owner-service
           predicates:
             - Path=/owner/**
+          filters:
+            - name: CircuitBreaker
+              args:
+                name: ownerServiceCircuitBreaker
+                fallbackUri: forward:/ownerServiceFallback
         - id: dog-service
           uri: lb://dog-service
           predicates:
             - Path=/dog/**
+          filters:
+            - name: CircuitBreaker
+              args:
+                name: dogServiceCircuitBreaker
+                fallbackUri: forward:/dogServiceFallback
         - id: reservation-service
           uri: lb://reservation-service
           predicates:
             - Path=/reservation/**
+          filters:
+            - name: CircuitBreaker
+              args:
+                name: reservationServiceCircuitBreaker
+                fallbackUri: forward:/reservationServiceFallback
+      default-filters:
+        - name: RequestRateLimiter
+          args:
+            redis-rate-limiter.replenishRate: 10
+            redis-rate-limiter.burstCapacity: 20
+            redis-rate-limiter.requestTokens: 1
+  redis:
+    connect-timeout: 30s
+    host: altkom-scah-redis
+    port: 6379
+    timeout: 1s
+
+resilience4j:
+  circuitbreaker:
+    instances:
+      ownerServiceCircuitBreaker:
+        sliding-window-size: 4
+        failure-rate-threshold: 50
+        wait-duration-in-open-state: 20s
+        permitted-number-of-calls-in-half-open-state: 4
+        automatic-transition-from-open-to-half-open-enabled: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: info,prometheus
