--- a/owner-service/owner-service.yml
+++ b/owner-service/owner-service.yml
@@ -25,3 +25,16 @@ feign:
       DOG-SERVICE:
         connectTimeout: 1000
         readTimeout: 5000
+  circuitbreaker:
+    enabled: true
+    alphanumeric-ids:
+      enabled: true
+resilience4j:
+  circuitbreaker:
+    instances:
+      DogClientgetOwnerDogsLong:
+        sliding-window-size: 4
+        failure-rate-threshold: 50
+        wait-duration-in-open-state: 20s
+        permitted-number-of-calls-in-half-open-state: 4
+        automatic-transition-from-open-to-half-open-enabled: true
