--- a/gateway/gateway.yml
+++ b/gateway/gateway.yml
@@ -1,6 +1,21 @@
 spring:
   application:
     name: gateway
+  main:
+    web-application-type: reactive
+  security:
+    oauth2:
+      client:
+        provider:
+          keycloak-provider:
+            issuer-uri: http://altkom-scah-keycloak:8080/auth/realms/app-realm
+        registration:
+          keycloak-gateway:
+            provider: keycloak-provider
+            client-id: gateway
+            client-secret: MJNS1M2iBm23whOr3aFT1wHGniSbD4Wd
+            authorization-grant-type: authorization_code
+            redirect-uri: "{baseUrl}/login/oauth2/code/keycloak"
   cloud:
     gateway:
       routes:
