--- a/owner-service/owner-service.yml
+++ b/owner-service/owner-service.yml
@@ -9,7 +9,7 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQL10Dialect
   datasource:
-    url: jdbc:postgresql://altkom-scah-reservation-postgres:5432/reservationdb
+    url: jdbc:postgresql://altkom-scah-owner-postgres:5432/ownerdb
     username: postgres
     password: postgres
   flyway:
